--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/confidants?serverTimezone=Asia/Shanghai
     username: root
-    password: 8888
+    password: root
   # session 失效时间（分钟）
   session:
     timeout: 86400
